[package]
name = "minipb"
version = "0.1.0"
authors = ["Joonas Koivunen <joonas.koivunen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
trybuild = "1.0"
stackvector = "1.0.8"
either = "1.5.3"
#quick-protobuf = "0.6.4"
